--- a/roles/CentOS7/tasks/main.yml
+++ b/roles/CentOS7/tasks/main.yml
@@ -158,7 +158,7 @@
   template: 
     src: ../templates/check_connection.j2
     dest: "{{ dest_http }}/auditplay/resources/views/sub_dashboard/centos7_connection.blade.php"
-  delegate_to: localhost
+  delegate_to: "192.168.106.10"
   ignore_errors: True
 
 - name: Generate Report
@@ -166,7 +166,7 @@
   template: 
     src: ../templates/ReportGenerator_CentOS.j2
     dest: "{{ dest_http }}/auditplay/resources/views/report/centos7/result_{{ item | regex_replace('.com') }}.blade.php"
-  delegate_to: localhost
+  delegate_to: "192.168.106.10"
   ignore_errors: True
     # - name: copy files
     #   copy:
